@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,7 +20,7 @@ public class ProductService {
 
         return sellingProducts.stream()
                 .map(ProductResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
